[gd_scene load_steps=3 format=3 uid="uid://5wvdcrba6idj"]

[ext_resource type="Script" path="res://Scripts/BattleHandler.gd" id="1_m2ge5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kt33v"]
bg_color = Color(0.344076, 0.344076, 0.344076, 1)

[node name="BattleGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2ge5")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kt33v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Info" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="YourHealth" type="Label" parent="MarginContainer/VBoxContainer/Info"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Your monster health:"

[node name="EnemyHealth" type="Label" parent="MarginContainer/VBoxContainer/Info"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Enemy monster health:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DefendedPlayer" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Player is defended"

[node name="DefendedEnemy" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Enemy is defended"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 20.0

[node name="BattleLog" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Test:[/b] Test
[b]Test:[/b] Test
[b]Test:[/b] Test"
fit_content = true

[node name="Actions" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10

[node name="Attack" type="Button" parent="MarginContainer/VBoxContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack"

[node name="Type attack" type="Button" parent="MarginContainer/VBoxContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Type attack"

[node name="Defend" type="Button" parent="MarginContainer/VBoxContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Defend"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
enabled = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/Actions/Attack" to="." method="PlayerTurn" binds= ["Attack"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Actions/Type attack" to="." method="PlayerTurn" binds= ["Type attack"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Actions/Defend" to="." method="PlayerTurn" binds= ["Defend"]]
